--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
 always-auth=true
-//npm.greensock.com/:_authToken=${GSAP_AUTH}
+//npm.greensock.com/:_authToken=GSAP_AUTH
 @gsap:registry=https://npm.greensock.com
